<resources>
    <string name="app_name">Plant Care App</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="some_error">Something wrong happened</string>
    <string name="e_mail">E-mail</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="open_navigation_drawer">Open Navigation Drawer</string>
    <string name="close_navigation_drawer">Close Navigation Drawer</string>

    <string name="my_plants">My Plants</string>
    <string name="discover_plants">Discover Plants</string>
    <string name="suggest_new_plant">Suggest New Plant</string>

    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="common_name">Common Name</string>
    <string name="choose_plant_photo">Take or choose a new plant photo.</string>
    <string name="latin_name">Latin Name (optional)</string>
    <string name="add_to_my_plants">Add to my plants</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="message_need_permission">Need permissions</string>
    <string name="message_grant_permission">Grant permission</string>
    <string name="label_setting">Settings</string>

    <string name="never">Never</string>
    <string name="one_day">1 Day</string>
    <string name="days">%1$d days</string>
    <string name="months">%1$d months</string>

    <string name="fertilizing">Fertilizing</string>
    <string name="no_plants_added">
        No plants added.\n
        To add new plant go to "Add Plant." </string>
    <string name="adding_new_plant">Adding New Plant</string>
    <string name="reset_password">Reset Password</string>
    <string name="add_to_your_plants">Add to your plants</string>
    <string name="spraying">Spraying</string>
    <string name="watering">Watering</string>
    <string name="spraying_frequency">Spraying Frequency</string>
    <string name="watering_frequency">Watering Frequency</string>
    <string name="fertilizing_frequency">Fertilizing Frequency</string>
    <string name="ask_a_question">Ask a question</string>
    <string name="none">---</string>
    <string name="ask_question">Ask Question</string>
    <string name="question">Your question</string>
    <string name="add_your_solution_here">Add your solution here</string>
    <string name="name_your_plant">Name your plant</string>
    <string name="customize_frequency">Customize frequency</string>
    <string name="choose_a_name_and_a_photo">Choose a name and a photo</string>

    <string name="advices">Advices</string>

    <string name="set_plant_requirements">Set plant requirements</string>
    <string name="advice">Advice</string>

    <string name="add">Add</string>
    <string name="submit">Submit</string>
    <string name="confirm">Confirm</string>
    <string name="requirements">Requirements</string>
    <string name="general_information">General Information</string>

    <string name="add_plant">Add Plant</string>
    <string name="discover">Discover</string>
    <string name="delete_plant">Delete plant</string>
    <string name="delete_plant_question">Are you sure you want to delete this plant?</string>

    <string name="notification_channel_name">Plant Notifications</string>
    <string name="notification_channel_description">Notifications for plants needs</string>
    <string name="plant_notification_title">Plant needs care</string>
    <string name="plant_notification_message">%1$s probably needs some attention.</string>
    <string name="db_plant_added">The plant has been added</string>
    <string name="this_field_cant_be_empty">This field can\'t be empty.</string>
    <string name="email_sent">Email sent.</string>
    <string name="email_not_valid">This is not a valid email.</string>
    <string name="logged_successfully">User logged in successfully</string>
    <string name="plant_delete_success">Plant deleted successfully</string>
    <string name="register_success">User registered successfully</string>
    <string name="permissions_denied">Permissions denied</string>
    <string name="choose_photo">Choose plant photo</string>

    <string-array name="categories">
        <item>@string/leaf_plants</item>
        <item>@string/flowers</item>
        <item>@string/succulents</item>
    </string-array>

    <string name="leaf_plants">Leaf Plants</string>
    <string name="flowers">Flowers</string>
    <string name="succulents">Succulents</string>

    <string-array name="photo_options">
        <item>@string/take_photo</item>
        <item>@string/gallery</item>
        <item>@string/cancel</item>
    </string-array>

    <string name="take_photo">Take Photo</string>
    <string name="gallery">Choose from Gallery</string>
    <string name="cancel">Cancel</string>

    <string name="password_too_short">Password too short! At least 6 char.</string>
    <string name="passwords_didnt_match">Passwords didn\'t match</string>
    <string name="connection_error">Connection Error! \nCheck your network settings.</string>
    <string name="refresh">Refresh</string>

</resources>