<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_photo" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="100dp"
        app:cardBackgroundColor="@color/transparent_white"
        app:cardCornerRadius="10dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                style="@style/TextHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_gravity="center|top"
                android:layout_marginTop="10dp"
                android:text="@string/login" />

            <EditText
                android:id="@+id/et_email"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:textColor="@drawable/text_color_list"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_account_selector"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/et_password"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@drawable/text_color_list"
                android:drawableStart="@drawable/ic_password_selector"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_login"
                style="@style/FirstButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:text="@string/login"/>

            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="5dp"
                android:paddingStart="15dp"
                android:text="@string/forgot_password" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_register"
                style="@style/SecondButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/register" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>